--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="../project_1_stolupin_gleb/img/logo.svg" alt="">
+      <img class="logo" src="../img/logo.svg" alt="">
       <nav>
         <ul class="header_ul">
           <li><a href="https://t.me/instaznayka">💬TG</a></li>
@@ -21,63 +21,63 @@
       <h2 class="subtitle">Коллекция. {октябрь:2023}</h2>
       <div class="container_cards">
         <div class="container">
-          <img alt="Nike Air Max Plus" src="../project_1_stolupin_gleb/img/nike air.png" class="container__image" />
+          <img alt="Nike Air Max Plus" src="../img/nike air.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">Nike Air Max Plus</h3>
             <p class="container__text">Patta FC Barcelona Culers del Món</p>
           </div>
         </div>
         <div class="container">
-          <img alt="Jordan 1 Retro High OG SP" src="../project_1_stolupin_gleb/img/jordan 1 high.png" class="container__image" />
+          <img alt="Jordan 1 Retro High OG SP" src="../img/jordan 1 high.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">Jordan 1 Retro High OG SP</h3>
             <p class="container__text">Union LA Bephies Beauty Supply Summer of ‘96</p>
           </div>
         </div>
         <div class="container">
-          <img alt="adidas Campus 00s" src="../project_1_stolupin_gleb/img/adidas campus.png" class="container__image" />
+          <img alt="adidas Campus 00s" src="../img/adidas campus.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">adidas Campus 00s</h3>
             <p class="container__text">Core Black</p>
           </div>
         </div>
         <div class="container">
-          <img alt="Converse Chuck Taylor All Star 70 Hi" src="../project_1_stolupin_gleb/img/converse chuck.png" class="container__image" />
+          <img alt="Converse Chuck Taylor All Star 70 Hi" src="../img/converse chuck.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">Converse Chuck Taylor All Star 70 Hi</h3>
             <p class="container__text">Comme des Garcons PLAY White</p>
           </div>
         </div>
         <div class="container">
-          <img alt="UGG Classic Ultra Mini Boot" src="../project_1_stolupin_gleb/img/ugg.png" class="container__image" />
+          <img alt="UGG Classic Ultra Mini Boot" src="../img/ugg.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">UGG Classic Ultra Mini Boot</h3>
             <p class="container__text">Chestnut (Women's)</p>
           </div>
         </div>
         <div class="container">
-          <img alt="New Balance 574 YURT" src="../project_1_stolupin_gleb/img/new balance.png" class="container__image" />
+          <img alt="New Balance 574 YURT" src="../img/new balance.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">New Balance 574 YURT</h3>
             <p class="container__text">Salehe Bembury Shark Skin</p>
           </div>
         </div>
         <div class="container">
-          <img alt="Nike Dunk Low SP" src="../project_1_stolupin_gleb/img/nike dunk.png" class="container__image" />
+          <img alt="Nike Dunk Low SP" src="../img/nike dunk.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">Nike Dunk Low SP</h3>
             <p class="container__text">Syracuse (2020/2022)</p>
           </div>
         </div>
         <div class="container">
-          <img alt="Jordan 1 Retro Low Golf" src="../project_1_stolupin_gleb/img/jordan 1 retro.png" class="container__image" />
+          <img alt="Jordan 1 Retro Low Golf" src="../img/jordan 1 retro.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">Jordan 1 Retro Low Golf</h3>
             <p class="container__text">Travis Scott Neutral Olive</p>
           </div>
         </div>
         <div class="container">
-          <img alt="adidas Yeezy Foam RNNR" src="../project_1_stolupin_gleb/img/adidas yeexy.png" class="container__image" />
+          <img alt="adidas Yeezy Foam RNNR" src="../img/adidas yeexy.png" class="container__image" />
           <div class="container_info">
             <h3 class="container__title">adidas Yeezy Foam RNNR</h3>
             <p class="container__text">Stone Sage</p>
@@ -88,7 +88,7 @@
   </main>
     <footer>
       <div class="footer_content">
-        <img class="logo_footer" src="../project_1_stolupin_gleb/img/logo_footer.svg" alt="">
+        <img class="logo_footer" src="../img/logo_footer.svg" alt="">
         <nav>
           <ul class="footer_ul">
             <li><a href="https://t.me/instaznayka">💬TG</a></li>
